--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by qbootstrap.com</title>
+	<title>Wedding &mdash; Muhammad Haris Setiawan &amp; Mutiara Indah Sari</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by QBOOTSTRAP.COM" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Come, join and celebrate our party" />
+	<meta name="keywords" content="semut, kutu, weeding, weeding semut kutu, weeding haris tiara, weeding tiara haris, weeding semut kutu" />
 	<meta name="author" content="QBOOTSTRAP.COM" />
-
   <!-- 
 	//////////////////////////////////////////////////////
 
@@ -26,11 +25,11 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<meta property="og:title" content="Weeding Muhammad Haaris Setiawan & Mutiara Indah Sari"/>
+	<meta property="og:image" content="https://drive.google.com/uc?id=1mi-JHAAkkMTp9hiRmiGJUc4QIGiV-pPo"/>
+	<meta property="og:url" content="https://semutmeetkutu.github.io/"/>
+	<meta property="og:site_name" content="Semut Meet Kutu"/>
+	<meta property="og:description" content="Weeding Muhammad Haaris Setiawan & Mutiara Indah Sari"/>
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -104,8 +103,8 @@
 							<div class="animate-box svg-sm colored">
 								<img src="images/flaticon/svg/004-nature.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
 								<h1 class="holder"><span>The Wedding of</span></h1>
-								<h2>Louie Jie &amp; Marializa</h2>
-								<p>02.12.2017</p>
+								<h2>Haaris &amp; Mutiara</h2>
+								<p>07.APRIL.2019</p>
 							</div>
 						</div>
 					</div>
