--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
 	            <li><a href="#" data-nav-section="people"><span>People</span></a></li>
 	            <li><a href="#" data-nav-section="when-where"><span>When &amp; Where</span></a></li>
 	            <li><a href="#" data-nav-section="rsvp"><span>RSVP</span></a></li>
-	            <li><a href="#" data-nav-section="gallery"><span>Gallery</span></a></li>
-	            <li><a href="#" data-nav-section="blog"><span>Blog</span></a></li>
 	          </ul>
 	        </div>
 		    </nav>
@@ -120,8 +118,9 @@
 					<div class="col-md-12 text-center section-heading svg-sm colored">
 						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
 						<h2>Are Getting Married</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam accusamus, sequi, minima repellendus explicabo magni aperiam, ducimus perferendis ad quidem suscipit omnis unde veritatis pariatur. Commodi, nisi. Iusto, accusantium a.</p>
-						<p><strong>on Dec 28, 2017 &mdash; Boracay, Philippines</strong></p>
+						<p>وَمِنْ ءَايَٰتِهِۦٓ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَٰجًۭا لِّتَسْكُنُوٓا۟ إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةًۭ وَرَحْمَةً ۚ إِنَّ فِى ذَٰلِكَ لَءَايَٰتٍۢ لِّقَوْمٍۢ يَتَفَكَّرُونَ</p>
+						<p>“Dan diantara tanda-tanda kekuasaanNya ialah Dia menciptakan untukmu isteri-isteri dari jenismu sendiri, supaya kamu cenderung dan merasa tenteram kepadanya, dan dijadikanNya diantaramu rasa kasih dan sayang. Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda bagi kaum yang berpikir.”</p>
+						<p><strong>QS. Ar. Ruum (30):21</strong></p>
 					</div>
 				</div>
 			</div>
@@ -129,13 +128,13 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
 						<img src="images/groom.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Louie Jie L. Mahusay</h3>
+						<h3>Muhammad Haaris Setiawan</h3>
 						<span>Groom</span>
 					</div>
 					<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><img src="images/flaticon/svg/003-luxury.svg" class="svg img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></h2></div>
 					<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
 						<img src="images/bride.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Marializa R. Tabay</h3>
+						<h3>Mutiara Indah Sari</h3>
 						<span>Bride</span>
 					</div>
 				</div>
@@ -151,12 +150,12 @@
 					<div class="col-md-12 section-heading text-center svg-sm colored">
 						<img src="images/flaticon/svg/006-flower-bell-outline-design-variant-with-vines-and-leaves.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
 						<h2 class="">The Wedding Day</h2>
-						<span class="datewed">Saturday, Dec. 2, 2017</span>
+						<span class="datewed">Sunday, Apr. 7, 2018</span>
 					</div>
 				</div>
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center">
-						<p class="countdown">
+						<p class="countdown" id="demo">
 							<span id="days"></span>
 							<span id="hours"></span>
 							<span id="minutes"></span>
@@ -329,84 +328,6 @@
 		</div>
 	</div>
 
-	<div id="qbootstrap-people" data-section="people">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h2>The Groomsmen</h2>
-						<div class="row">
-						<div class="col-md-10 col-md-offset-1 subtext  ">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
-						</div>
-					</div>
-					</div>
-				</div>
-			</div>
-			<div class="row row-bottom-padded-lg">
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/groom-men-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Ian Bill</h3>
-					</div>
-				</div>
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/groom-men-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>George Smith</h3>
-					</div>
-				</div>
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/groom-men-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Brian Thompson</h3>
-					</div>
-				</div>
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/groom-men-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>David Howard</h3>
-					</div>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h2>The Bridesmaid</h2>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/bridesmaid-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Angel Thomas</h3>
-					</div>
-				</div>
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/bridesmaid-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Kathy Shol</h3>
-					</div>
-				</div>
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/bridesmaid-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Rose Mel</h3>
-					</div>
-				</div>
-				<div class="col-md-3 text-center animate-box">
-					<div class="groom-men">
-						<img src="images/bridesmaid-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Ann Hathway</h3>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<div id="qbootstrap-when-where" data-section="when-where">
 		<div class="container">
 			<div class="row animate-box">
@@ -495,8 +416,6 @@
 		</div>
 	</div>
 
-	
-
 	<div id="qbootstrap-started" class="qbootstrap-bg" data-section="rsvp" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
@@ -513,155 +432,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="row animate-box">
-				<div class="col-md-10 col-md-offset-1">
-					<form class="form-inline">
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="name" class="sr-only">Name</label>
-								<input type="name" class="form-control" id="name" placeholder="Name">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">I am Attending</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="qbootstrap-gallery" data-section="gallery">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h2>Our Selfie Photos</h2>
-						<div class="row">
-						<div class="col-md-10 col-md-offset-1 subtext">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
-						</div>
-					</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-3 col-sm-6">
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup image-popup" href="images/gallery-1.jpg"><img src="images/gallery-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-10.jpg"><img src="images/gallery-10.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6">
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-6.jpg"><img src="images/gallery-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-2.jpg"><img src="images/gallery-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-5.jpg"><img src="images/gallery-5.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6">
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-7.jpg"><img src="images/gallery-7.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-3.jpg"><img src="images/gallery-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-4.jpg"><img src="images/gallery-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6">
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-8.jpg"><img src="images/gallery-8.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-					<div class="gallery animate-box">
-						<a class="gallery-img image-popup" href="images/gallery-9.jpg"><img src="images/gallery-9.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="qbootstrap-press" data-section="blog">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="col-md-12 text-center section-heading svg-sm colored">
-						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h2>Our Blog</h2>
-						<div class="row">
-						<div class="col-md-10 col-md-offset-1 subtext">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
-						</div>
-					</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="qbootstrap-press-item animate-box">
-						<div class="qbootstrap-press-img" style="background-image: url(images/blog-1.jpg)">
-						</div>
-						<div class="qbootstrap-press-text">
-							<h3 class="h2 qbootstrap-press-title">The Wedding Party <span class="qbootstrap-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-					<div class="qbootstrap-press-item animate-box">
-						<div class="qbootstrap-press-img" style="background-image: url(images/blog-2.jpg)">
-						</div>
-						<div class="qbootstrap-press-text">
-							<h3 class="h2 qbootstrap-press-title">Wedding Party <span class="qbootstrap-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-md-6">
-					<div class="qbootstrap-press-item animate-box">
-						<div class="qbootstrap-press-img" style="background-image: url(images/blog-3.jpg);">
-						</div>
-						<div class="qbootstrap-press-text">
-							<h3 class="h2 qbootstrap-press-title">Venue Wedding <span class="qbootstrap-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-					<div class="qbootstrap-press-item animate-box">
-						<div class="qbootstrap-press-img" style="background-image: url(images/blog-4.jpg);">
-						</div>
-						<div class="qbootstrap-press-text">
-							<h3 class="h2 qbootstrap-press-title">About The Couple <span class="qbootstrap-border"></span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-							<p><a href="#" class="btn btn-primary btn-sm">Learn more</a></p>
-						</div>
-					</div>
-				</div>
-
-			</div>
 		</div>
 	</div>
 
@@ -669,7 +439,7 @@
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-12">
-					<p class="copyright text-center">&copy; 2017 <a href="index.html">Wedding</a>. All Rights Reserved. Images by <a href="http://unsplash.com/" target="_blank">Unsplash</a></p>
+					<p class="copyright text-center">&copy; 2018 <a href="\">Semut Meet</a>. All Rights</p>
 				</div>
 			</div>
 			<div class="row">
